# vpnbot

./: .gitignore  Dockerfile  deploy.sh  docker-compose.yaml  main.py  pyproject.toml
.github/workflow/: deploy.yaml
.github/workflows/: main.yml
3proxy/: 3proxy.cfg  Dockerfile  Dockerfile.proxy  init.sh  passwd  proxymanager.py  tasks.py
bot/: database.py  main.py  pyproject.toml  worker.py
tests/: conftest.py  test_proxymanager.py
xray/: Dockerfile  config.json  entrypoint.sh
