[tool.poetry]
name = "auronvpn-bot"
version = "0.1.0"
description = "Telegram бот для VPN сервиса AuronVPN"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "bot"},
    {include = "3proxy"},
]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.7.0"
python-dotenv = "^1.2.1"
aiosqlite = "^0.21.0"
celery = "^5.5.3"
redis = "^7.0.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"
pytest = "^8.4.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"
pytest-asyncio = "^0.23.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"